--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,12 @@ dependencies:
 
   dio: ^5.0.1
 
+  # Google
+  url_launcher: ^6.1.10
+
+  # Animation
+  flutter_spinkit: ^5.1.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
